# unbeheader

./: .editorconfig  .gitignore  .header.yaml  .mypy.ini  .python-version  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/matchers/: mypy.json  ruff.json  unbehead.json
.github/workflows/: linting.yaml  releasing.yaml  testing.yaml
src/unbeheader/: __init__.py  cli.py  config.py  headers.py  typing.py  util.py
stubs/colorclass/: __init__.pyi
tests/: test_cli.py  test_config.py  test_headers.py  test_util.py
unbeheader/: __init__.py  cli.py  config.py  headers.py  util.py
