[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "unbeheader"
version = "1.1.2-dev"
description = "Never fail to maintain your file headers"
repository = "https://github.com/unconventionaldotdev/unbeheader"
readme = "README.md"
license = "MIT"
authors = [
  "Adrian Moennich <adrian.moennich@cern.ch>",
  "Alejandro Avilés <ome@unconventional.dev>"
]
maintainers = [
  "Alejandro Avilés <ome@unconventional.dev>",
  "Adrian Moennich <adrian.moennich@cern.ch>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.scripts]
unbehead = "unbeheader.cli:main"

[tool.poetry.dependencies]
python = ">=3.9.0"
colorclass = ">=2.2.2"
pyyaml = ">=6"
click = ">=8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.0"
ruff = "^0.0.280"
types-pyyaml = "^6.0.12.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
