[project]
name = "unbeheader"
version = "1.5.0"
description = "Never fail to maintain your file headers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Adrian Moennich", email = "adrian.moennich@cern.ch" },
  { name = "Alejandro Avilés", email = "ome@unconventional.dev" }
]
maintainers = [
  { name = "Alejandro Avilés", email = "ome@unconventional.dev" },
  { name = "Adrian Moennich", email = "adrian.moennich@cern.ch" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "colorclass>=2.2.2",
  "pyyaml>=6",
  "click>=8",
]

[dependency-groups]
dev = [
  "mypy>=1.5.1",
  "pytest>=7.4.0",
  "ruff>=0.0.280",
  "tox>=4.11.3",
  "types-pyyaml>=6.0.12.11",
  "pytest-cov>=4.1.0",
]

[project.scripts]
unbehead = "unbeheader.cli:main"

[project.urls]
Repository = "https://github.com/unconventionaldotdev/unbeheader"

[tool.hatch.build.targets.wheel]
packages = ["src/unbeheader"]

[tool.hatch.build.targets.sdist]
include = [
  "src/unbeheader",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"
